{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 142,
  "lineage": "bd3d8c9e-a4ce-d561-2301-0e4b8c2f56ec",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "http_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/zones/asia-east1-a/instanceGroups/igm-asia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/zones/australia-southeast1-a/instanceGroups/igm-australia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/zones/europe-west1-b/instanceGroups/igm-europe",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/zones/us-central1-a/instanceGroups/igm-north-america",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-02-17T06:18:38.557-08:00",
            "description": "Backend service for HTTP traffic",
            "enable_cdn": false,
            "fingerprint": "JjSJ9twfnFk=",
            "generated_id": 7841206711764319185,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/httpHealthChecks/http-health-check"
            ],
            "id": "projects/konte-eksamen-eksempel1/global/backendServices/http-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-backend-service",
            "port_name": "http",
            "project": "konte-eksamen-eksempel1",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/securityPolicies/web-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/backendServices/http-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_http_health_check.health_check",
            "google_compute_instance_group_manager.igm_asia",
            "google_compute_instance_group_manager.igm_australia",
            "google_compute_instance_group_manager.igm_europe",
            "google_compute_instance_group_manager.igm_north_america",
            "google_compute_instance_template.vm_template_asia",
            "google_compute_instance_template.vm_template_australia",
            "google_compute_instance_template.vm_template_europe",
            "google_compute_instance_template.vm_template_north_america",
            "google_compute_network.vpc_https_servers",
            "google_compute_resource_policy.backup_policy_asia",
            "google_compute_resource_policy.backup_policy_australia",
            "google_compute_resource_policy.backup_policy_europe",
            "google_compute_resource_policy.backup_policy_north_america",
            "google_compute_security_policy.web_security_policy",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_australia",
            "google_compute_subnetwork.subnet_europe",
            "google_compute_subnetwork.subnet_north_america"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-17T06:12:10.508-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/konte-eksamen-eksempel1/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "priority": 1000,
            "project": "konte-eksamen-eksempel1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/firewalls/allow-http",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_https_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 2946928230560365433,
            "id": "projects/konte-eksamen-eksempel1/global/forwardingRules/https-forwarding-rule",
            "ip_address": "34.54.39.96",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "konte-eksamen-eksempel1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/targetHttpsProxies/global-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.http_backend",
            "google_compute_http_health_check.health_check",
            "google_compute_instance_group_manager.igm_asia",
            "google_compute_instance_group_manager.igm_australia",
            "google_compute_instance_group_manager.igm_europe",
            "google_compute_instance_group_manager.igm_north_america",
            "google_compute_instance_template.vm_template_asia",
            "google_compute_instance_template.vm_template_australia",
            "google_compute_instance_template.vm_template_europe",
            "google_compute_instance_template.vm_template_north_america",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_network.vpc_https_servers",
            "google_compute_resource_policy.backup_policy_asia",
            "google_compute_resource_policy.backup_policy_australia",
            "google_compute_resource_policy.backup_policy_europe",
            "google_compute_resource_policy.backup_policy_north_america",
            "google_compute_security_policy.web_security_policy",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_australia",
            "google_compute_subnetwork.subnet_europe",
            "google_compute_subnetwork.subnet_north_america",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.https_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_https_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "mtu": 0,
            "name": "vpc-https-servers",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3337641809204411723",
            "numeric_id": "3337641809204411723",
            "project": "konte-eksamen-eksempel1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "web_security_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Security policy protecting against SQL injection, XSS, RCE, LFI, and brute-force attacks",
            "fingerprint": "PWCpWKrqZQs=",
            "id": "projects/konte-eksamen-eksempel1/global/securityPolicies/web-security-policy",
            "name": "web-security-policy",
            "project": "konte-eksamen-eksempel1",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block Local File Inclusion (LFI) attacks",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('lfi-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2500,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block Remote Code Execution (RCE) attacks",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('rce-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2600,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block SQL injection attempts",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('sqli-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block XSS attacks",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('xss-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Throttle requests exceeding 10 per minute per IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 3000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "",
                    "enforce_on_key_configs": [
                      {
                        "enforce_on_key_name": "",
                        "enforce_on_key_type": "IP"
                      }
                    ],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(403)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 10,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/securityPolicies/web-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:12:11.253-08:00",
            "gateway_address": "10.30.0.1",
            "id": "projects/konte-eksamen-eksempel1/regions/asia-east1/subnetworks/subnet-asia",
            "ip_cidr_range": "10.30.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konte-eksamen-eksempel1",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/regions/asia-east1/subnetworks/subnet-asia",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8693632057867173204
          },
          "dependencies": [
            "google_compute_network.vpc_https_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_australia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:12:13.414-08:00",
            "gateway_address": "10.40.0.1",
            "id": "projects/konte-eksamen-eksempel1/regions/australia-southeast1/subnetworks/subnet-australia",
            "ip_cidr_range": "10.40.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-australia",
            "network": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konte-eksamen-eksempel1",
            "purpose": "PRIVATE",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/regions/australia-southeast1/subnetworks/subnet-australia",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2146703676454927698
          },
          "dependencies": [
            "google_compute_network.vpc_https_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_europe",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:12:11.385-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/konte-eksamen-eksempel1/regions/europe-west1/subnetworks/subnet-europe",
            "ip_cidr_range": "10.10.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-europe",
            "network": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konte-eksamen-eksempel1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/regions/europe-west1/subnetworks/subnet-europe",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6435638798261878100
          },
          "dependencies": [
            "google_compute_network.vpc_https_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_north_america",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:12:10.697-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/konte-eksamen-eksempel1/regions/us-central1/subnetworks/subnet-north-america",
            "ip_cidr_range": "10.20.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-north-america",
            "network": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/networks/vpc-https-servers",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konte-eksamen-eksempel1",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/regions/us-central1/subnetworks/subnet-north-america",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5715311738352500053
          },
          "dependencies": [
            "google_compute_network.vpc_https_servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:19:54.157-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/konte-eksamen-eksempel1/global/targetHttpsProxies/global-https-proxy",
            "name": "global-https-proxy",
            "project": "konte-eksamen-eksempel1",
            "proxy_bind": false,
            "proxy_id": 7944788193228815205,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/targetHttpsProxies/global-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/sslCertificates/managed-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/urlMaps/global-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.http_backend",
            "google_compute_http_health_check.health_check",
            "google_compute_instance_group_manager.igm_asia",
            "google_compute_instance_group_manager.igm_australia",
            "google_compute_instance_group_manager.igm_europe",
            "google_compute_instance_group_manager.igm_north_america",
            "google_compute_instance_template.vm_template_asia",
            "google_compute_instance_template.vm_template_australia",
            "google_compute_instance_template.vm_template_europe",
            "google_compute_instance_template.vm_template_north_america",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_network.vpc_https_servers",
            "google_compute_resource_policy.backup_policy_asia",
            "google_compute_resource_policy.backup_policy_australia",
            "google_compute_resource_policy.backup_policy_europe",
            "google_compute_resource_policy.backup_policy_north_america",
            "google_compute_security_policy.web_security_policy",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_australia",
            "google_compute_subnetwork.subnet_europe",
            "google_compute_subnetwork.subnet_north_america",
            "google_compute_url_map.https_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-17T06:19:42.995-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/backendServices/http-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "mDVrnhfoqJA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/konte-eksamen-eksempel1/global/urlMaps/global-url-map",
            "map_id": 7203379282052053905,
            "name": "global-url-map",
            "path_matcher": [],
            "project": "konte-eksamen-eksempel1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konte-eksamen-eksempel1/global/urlMaps/global-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.http_backend",
            "google_compute_http_health_check.health_check",
            "google_compute_instance_group_manager.igm_asia",
            "google_compute_instance_group_manager.igm_australia",
            "google_compute_instance_group_manager.igm_europe",
            "google_compute_instance_group_manager.igm_north_america",
            "google_compute_instance_template.vm_template_asia",
            "google_compute_instance_template.vm_template_australia",
            "google_compute_instance_template.vm_template_europe",
            "google_compute_instance_template.vm_template_north_america",
            "google_compute_network.vpc_https_servers",
            "google_compute_resource_policy.backup_policy_asia",
            "google_compute_resource_policy.backup_policy_australia",
            "google_compute_resource_policy.backup_policy_europe",
            "google_compute_resource_policy.backup_policy_north_america",
            "google_compute_security_policy.web_security_policy",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_australia",
            "google_compute_subnetwork.subnet_europe",
            "google_compute_subnetwork.subnet_north_america"
          ]
        }
      ]
    }
  ]
}